[package]
name = "sx128x"
version = "0.1.0"
edition = "2024"

[dependencies]
device-driver = "1.0.4"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

defmt = { version = "1.0", optional = true }

bitflags = "2.9"

[dev-dependencies]
embassy-futures = "0.1.1"
embedded-hal-mock = { version = "0.11", features = ["embedded-hal-async"] }

[features]

defmt-1 = ["dep:defmt"]
